add some styling

--- a/project.html
+++ b/project.html
@@ -5,10 +5,11 @@
     <title>laziest.site</title>
     <link rel="canonical" href="https://laziest.site/project">
     <meta http-equiv="refresh" content="0; url=https://laziest.site/project">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <p>if you are not redirected, follow this
+    <p style="padding: 1em">if you are not redirected, follow this
         <a href="https://laziest.site/project">link</a>
     </p>
 </body>
